This is the fourth commit

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
                         <a class="button is-primary">
                             <strong>Sign up</strong>
                         </a>
-                        <a class="button is-light">
-                            Log in bruger
-                        </a>
+
                     </div>
                 </div>
             </div>
@@ -74,7 +72,7 @@
         <div class="columns">
             <div class="column is-half">
                 <div class="file is-primary">
-<label class="file-label">Billede Fil:</label><br/>
+<label class="file-label">Billede fil:</label><br/>
 
                 <span class="file-cta ">
       <span class="file-icon ">
@@ -88,14 +86,18 @@
                 </div>
                 <div class="single-image">
 <img  id="onepic" height="150" width="200">
+                    <p id="p1"></p>
                 </div>
-            </div>
+                </div>
             <div class="column">
 <canvas id="imageCanvas" ></canvas>
         </div>
         </div>
+        <a href="#" class="button" id="btndownload" >Download</a>
             <div class="columns">
+
 <canvas id="tutorial2" width="2500" height="2000"></canvas>
+
             </div>
     </section>
     <footer class="footer">
