--- a/galleri.html
+++ b/galleri.html
@@ -7,6 +7,7 @@
     <title>Galleri</title>
     <link rel="stylesheet" type="text/css" src="./css/bootsrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -17,6 +18,8 @@
 
     <link rel="stylesheet" href="css/customer.css">
     <script async src="js/customer.js"></script>
+
+    <script async src="js/lightbox-plus-jquery.min.js"></script>
 </head>
 
 <body>
@@ -70,7 +73,7 @@
             </div>
         </div>
     </nav>
-
+ <div class="lb-container">
     <section class="section">
 
             <div class="content is-large">
@@ -79,124 +82,16 @@
 
             </div>
 
+           <div class="gallery">
 
-            <div class="columns is-multiline">
-                <div class="column is-one-quarter-desktop is-half-tablet">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-3by2">
-                                <img src="pic-1.png" class="fancybox" alt="">
-                            </figure>
-                            <div class="card-content is-overlay is-clipped">
-              <span class="tag is-info">
-                Photo Title That is really long to show the clipping
-              </span>
-                            </div>
-                        </div>
-                        <footer class="card-footer">
-                            <a class="card-footer-item">
-                                BUY
-                            </a>
-                        </footer>
-                    </div>
-                </div>
-                <div class="column is-one-quarter-desktop is-half-tablet">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-3by2">
-                                <img src="pic-2.png" class="fancybox" alt="">
-                            </figure>
-                            <div class="card-content is-overlay is-clipped">
-              <span class="tag is-info">
-                Photo Title
-              </span>
-                            </div>
-                        </div>
-                        <footer class="card-footer">
-                            <a class="card-footer-item">
-                                BUY
-                            </a>
-                        </footer>
-                    </div>
-                </div>
-                <div class="column is-one-quarter-desktop is-half-tablet">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-3by2">
-                                <img src="pic-3.png" alt="">
-                            </figure>
-                            <div class="card-content is-overlay is-clipped">
-              <span class="tag is-info">
-                Photo Title
-              </span>
-                            </div>
-                        </div>
-                        <footer class="card-footer">
-                            <a class="card-footer-item">
-                                BUY
-                            </a>
-                        </footer>
-                    </div>
-                </div>
-                <div class="column is-one-quarter-desktop is-half-tablet">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-3by2">
-                                <img src="pic-4.png" alt="">
-                            </figure>
-                            <div class="card-content is-overlay is-clipped">
-              <span class="tag is-info">
-                Photo Title
-              </span>
-                            </div>
-                        </div>
-                        <footer class="card-footer">
-                            <a class="card-footer-item">
-                                BUY
-                            </a>
-                        </footer>
-                    </div>
-                </div>
-                <div class="column is-one-quarter-desktop is-half-tablet">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-3by2">
-                                <img src="pic-5.png" alt="">
-                            </figure>
-                            <div class="card-content is-overlay is-clipped">
-              <span class="tag is-info">
-                Photo Title
-              </span>
-                            </div>
-                        </div>
-                        <footer class="card-footer">
-                            <a class="card-footer-item">
-                                BUY
-                            </a>
-                        </footer>
-                    </div>
-                </div>
-                <div class="column is-one-quarter-desktop is-half-tablet">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-3by2">
-                                <img src="pic-6.png" alt="">
-                            </figure>
-                            <div class="card-content is-overlay is-clipped">
-              <span class="tag is-info">
-                Okapi
-              </span>
-                            </div>
-                        </div>
-                        <footer class="card-footer">
-                            <a class="card-footer-item">
-                                BUY
-                            </a>
-                        </footer>
-                    </div>
-                </div>
-        </div>
+               <a href="images/pic1.png" data-lightbox="mygallery"><img src ="images/pic1.png"></a>
+               <a href="images/pic2.png" data-lightbox="mygallery"><img src ="images/pic2.png"></a>
+               <a href="images/pic3.png" data-lightbox="mygallery"><img src ="images/pic3.png"></a>
+               <a href="images/pic4.png" data-lightbox="mygallery"><img src ="images/pic4.png"></a>
+               <a href="images/pic5.png" data-lightbox="mygallery"><img src ="images/pic5.png"></a>
+               <a href="images/pic6.png" data-lightbox="mygallery"><img src ="images/pic6.png"></a>
 
+           </div>
 
     </section>
     <footer class="footer">
@@ -208,6 +103,6 @@
         </div>
     </footer>
 </div>
-
+</div>
 </body>
 </html>
