--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Skaberiet|FileUploader</title>
     <link rel="stylesheet" type="text/css" src="./css/bootsrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -16,6 +17,8 @@
     <script async src="index.js"></script>
     <link rel="stylesheet" href="css/customer.css">
     <script async src="js/customer.js"></script>
+
+    <script async src="js/lightbox-plus-jquery.min.js"></script>
 </head>
 
 <body>
@@ -87,6 +90,7 @@
                 <div class="single-image">
 <img  id="onepic" height="150" width="200">
                     <p id="p1"></p>
+                    <p id="p2"></p>
                 </div>
                 </div>
             <div class="column">
